SEO and Og tages added

--- a/about.html
+++ b/about.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--seo-->
+	<meta name="description" content="Marvel Voyages is your gateway to Sri Lanka’s beauty and culture. We offer tailored travel experiences from wildlife safaris and cultural tours to wellness retreats. Let us help you discover Sri Lanka’s diverse landscapes, vibrant culture, and unique wildlife with expert planning and personalized service." />
+	<meta name="keywords" content="Sri Lanka travel, Marvel Voyages, tailored travel experiences, wildlife safaris, cultural heritage, wellness retreats, luxury travel, adventure tourism, private guided tours, Sri Lanka landscapes, hill country, beaches, Nuwara Eliya, Sigiriya, tea plantations, luxury accommodation, Knuckles Mountain Range, Adam’s Peak, Sri Lankan culture, Yala National Park, Udawalawe, Bundala, birdwatching, Sri Lankan wildlife" />
+	<meta name="author" content="Marvel Voyages" />
+	
+	<meta property="og:title" content="About Us - Marvel Voyages | Tailored Travel Experiences in Sri Lanka" />
+	<meta property="og:description" content="Discover Sri Lanka with Marvel Voyages. We offer personalized travel experiences, from wildlife safaris and cultural tours to wellness retreats, designed to showcase the beauty and diversity of this tropical paradise." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/about.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/logo.png" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />	
+	<!--seo-->
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,6 +70,8 @@
 							<span data-text-preloader="A" class="letters-loading">A</span>
 							<span data-text-preloader="G" class="letters-loading">G</span>
 							<span data-text-preloader="E" class="letters-loading">E</span>
+							<span data-text-preloader="S" class="letters-loading">S</span>
+
 							<!--<span data-text-preloader="O" class="letters-loading">O</span>-->
 						</div>
 					</div>
