--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 	<title>Marvel Voyages</title>
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+	
+	<!--SEO-->
+	<meta name="description" content="Discover Sri Lanka with Marvel Voyages. Embark on thrilling safaris, explore cultural heritage, and enjoy luxurious retreats in this tropical paradise. Tailored travel experiences and 24/7 support ensure your unforgettable journey." />
+	<meta name="keywords" content="Sri Lanka travel, Marvel Voyages, wildlife safaris, cultural tours, luxury travel, beach holidays, boutique accommodation, adventure tourism, wellness retreats, guided tours, family travel, nature tours, private tours, tailor-made itineraries, adventure tours, wildlife tours, beach adventure tours, cultural tour packages, northern region tours, railway tours, ayurveda tours, yoga tours, safari tours, Pinnawala, Sigiriya, Minneriya, Kandy, Nuwara Eliya, Yala, Kitulgala, Hortan Plains, Ella, Jaffna, Anuradhapura, Mirissa, Kalpitiya, Hikkaduwa, Galle, Wilpattu, Trincomalee, Polonnaruwa, wellness experiences" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="Marvel Voyages - Unforgettable Travel Experiences in Sri Lanka" />
+	<meta property="og:description" content="Explore Sri Lanka with Marvel Voyages. Enjoy safaris, cultural tours, luxury stays, and adventure activities. Tailor-made itineraries and 24/7 customer support for a memorable journey." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/logo.png" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO End-->
+	
 
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,6 +71,8 @@
 							<span data-text-preloader="A" class="letters-loading">A</span>
 							<span data-text-preloader="G" class="letters-loading">G</span>
 							<span data-text-preloader="E" class="letters-loading">E</span>
+							<span data-text-preloader="S" class="letters-loading">S</span>
+
 							<!--<span data-text-preloader="O" class="letters-loading">O</span>-->
 						</div>
 					</div>
