--- a/t1_5daybeach.html
+++ b/t1_5daybeach.html
@@ -11,6 +11,21 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Join Marvel Voyages for a refreshing 5 Day Beach Adventure Tour in Sri Lanka. Explore beautiful beaches in Negombo, Kalpitiya, Hikkaduwa, and Mirissa while enjoying activities like kitesurfing, snorkeling, and whale watching." />
+	<meta name="keywords" content="5 Day Beach Adventure Tour, Sri Lanka beach tours, Negombo, Kalpitiya, Hikkaduwa, Mirissa, kitesurfing, snorkeling, whale watching, beach vacation, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+	
+	<meta property="og:title" content="5 Day Beach Adventure Tour - Marvel Voyages | Explore Sri Lanka's Beautiful Beaches" />
+	<meta property="og:description" content="Experience the beauty of Sri Lanka with Marvel Voyages on our 5 Day Beach Adventure Tour. Enjoy kitesurfing, snorkeling, and whale watching at stunning beach destinations." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t1_5daybeach.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/beach-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO End-->
+	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
