--- a/t1_7dayadventure.html
+++ b/t1_7dayadventure.html
@@ -10,6 +10,21 @@
 	<title>Marvel Voyages - 7 Day Adventure Tour</title>
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+	
+
+	<!--SEO-->
+	<meta name="description" content="Join Marvel Voyages for an exhilarating 7 Day Adventure Tour in Sri Lanka. Experience white water rafting, visit stunning landscapes, and explore the natural beauty of Kandy, Kitulgala, Nuwara Eliya, Horton Plains, Ella, and Yala." />
+	<meta name="keywords" content="7 Day Adventure Tour, Sri Lanka adventure tours, white water rafting, Kandy, Kitulgala, Nuwara Eliya, Horton Plains, Ella, Yala National Park, adventure travel, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="7 Day Adventure Tour - Marvel Voyages | Experience Thrills in Sri Lanka" />
+	<meta property="og:description" content="Embark on a 7 Day Adventure Tour with Marvel Voyages. Experience white water rafting, explore beautiful landscapes, and enjoy thrilling adventures in Sri Lanka." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t1_7dayadventure.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/adventure-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	
 
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
