--- a/t1_7daywildlife.html
+++ b/t1_7daywildlife.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Join Marvel Voyages for an unforgettable 7 Day Wildlife Tour in Sri Lanka. Explore Pinnawala, Sigiriya, Minneriya, Kandy, Nuwara Eliya, and Yala National Park, and witness the rich wildlife and stunning landscapes." />
+	<meta name="keywords" content="7 Day Wildlife Tour, Sri Lanka wildlife tours, Pinnawala Elephant Orphanage, Sigiriya Rock Fortress, Minneriya National Park, Kandy, Nuwara Eliya, Yala National Park, adventure travel, wildlife safari, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="7 Day Wildlife Tour - Marvel Voyages | Explore Sri Lanka's Nature" />
+	<meta property="og:description" content="Experience the best of Sri Lanka's wildlife with our 7 Day Wildlife Tour. Visit Pinnawala, Sigiriya, Minneriya, Kandy, Nuwara Eliya, and Yala National Park." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t1_7daywildlife.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/wildlife-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
