--- a/t2_11daycultural.html
+++ b/t2_11daycultural.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Embark on an unforgettable 11 Day Cultural Tour in Sri Lanka with Marvel Voyages. Visit Anuradhapura, Dambulla, Sigiriya, Kandy, Nuwara Eliya, Ella, Galle, and Colombo while immersing yourself in the rich cultural heritage." />
+	<meta name="keywords" content="11 Day Cultural Tour, Sri Lanka cultural tours, Anuradhapura, Dambulla, Sigiriya, Minneriya, Polonnaruwa, Kandy, Nuwara Eliya, Ella, Galle, Colombo, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="11 Day Cultural Tour - Marvel Voyages | Discover Sri Lanka's Rich Heritage" />
+	<meta property="og:description" content="Join Marvel Voyages for an immersive 11 Day Cultural Tour of Sri Lanka. Experience the ancient cities of Anuradhapura, Dambulla, Sigiriya, Kandy, Nuwara Eliya, Ella, Galle, and Colombo." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t2_11daycultural.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/cultural-tour-11days.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
