--- a/t2_7daycultural.html
+++ b/t2_7daycultural.html
@@ -16,6 +16,20 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+	<!--SEO-->
+	<meta name="description" content="Experience the beauty and history of Sri Lanka on a 7 Day Cultural Tour with Marvel Voyages. Explore Sigiriya, Polonnaruwa, Kandy, Dambulla, Nuwara Eliya, Galle, and Colombo while immersing yourself in local culture." />
+	<meta name="keywords" content="7 Day Cultural Tour, Sri Lanka cultural tours, Sigiriya, Polonnaruwa, Kandy, Dambulla, Nuwara Eliya, Galle, Colombo, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="7 Day Cultural Tour - Marvel Voyages | Explore Sri Lanka's Heritage" />
+	<meta property="og:description" content="Join Marvel Voyages for an immersive 7 Day Cultural Tour in Sri Lanka. Discover the wonders of Sigiriya, Polonnaruwa, Kandy, Dambulla, Nuwara Eliya, Galle, and Colombo, rich in culture and history." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t2_7daycultural.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/cultural-tour-7days.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Stylesheets -->
 	<link href="assets/css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/lib/fontawesome/css/fontawesome.min.css" rel="stylesheet">
