--- a/t3_7dayNothern.html
+++ b/t3_7dayNothern.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Explore the beauty and culture of Sri Lanka's Northern region with our 7 Day Northern Region Tour. Visit Jaffna, Point Pedro, Anuradhapura, Mihintale, Wilpattu, Sigiriya, and Dambulla." />
+	<meta name="keywords" content="7 Day Northern Region Tour, Jaffna, Point Pedro, Anuradhapura, Mihintale, Wilpattu, Sigiriya, Dambulla, Sri Lanka tours, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+	
+	<meta property="og:title" content="7 Day Northern Region Tour - Marvel Voyages | Discover Sri Lanka's Cultural Heritage" />
+	<meta property="og:description" content="Join Marvel Voyages for a 7 Day Northern Region Tour in Sri Lanka. Explore Jaffna, Point Pedro, Anuradhapura, Mihintale, Wilpattu, Sigiriya, and Dambulla while immersing yourself in the local culture." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t3_7dayNothern.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/northern-tour-7days.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
