--- a/t3_railwaynothern.html
+++ b/t3_railwaynothern.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Experience the breathtaking landscapes and rich culture of Sri Lanka on our 9 Days Northern Region Railway Tour. Visit Colombo, Jaffna, Anuradhapura, Trincomalee, and more!" />
+	<meta name="keywords" content="Northern Region Railway Tour, Jaffna, Colombo, Kankesanthurai, Anuradhapura, Trincomalee, Batticaloa, Polonnaruwa, Sri Lanka tours, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="Northern Region Railway Tour - Marvel Voyages | Discover Sri Lanka" />
+	<meta property="og:description" content="Join Marvel Voyages for a 9-Day Railway Tour through Sri Lanka's Northern Region. Explore Jaffna, Kankesanthurai, and other historic sites while enjoying scenic train journeys." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t3_railwaynothern.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/northern-railway-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
