--- a/t4_11daywellness.html
+++ b/t4_11daywellness.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Embark on an enriching 11 Day Wellness Tour in Sri Lanka. Experience Ayurveda, yoga, and breathtaking landscapes while rejuvenating your mind and body." />
+	<meta name="keywords" content="Wellness tour, Ayurveda retreat, yoga, Sri Lanka, Negombo, Sigiriya, Nuwara Eliya, Ella, Wellness tour, Ayurveda wellness retreat, yoga and Ayurveda in Sri Lanka, holistic healing tour, wellness holidays in Sri Lanka, Ayurvedic treatments, yoga retreats in Sri Lanka, wellness tourism Sri Lanka, mindfulness and meditation, detox and rejuvenation programs, Ayurvedic wellness programs, yoga and wellness experiences, nature retreats in Sri Lanka, relaxation and wellness getaway, Ayurvedic spa experiences, natural healing in Sri Lanka, cultural and wellness tour, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="11 Day Wellness Tour - Marvel Voyages | Experience Serenity in Sri Lanka" />
+	<meta property="og:description" content="Join our 11 Day Wellness Tour to rejuvenate your mind and body. Enjoy Ayurveda treatments, yoga sessions, and breathtaking views across Sri Lanka." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t4_11daywellness.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/wellness-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
