--- a/t4_7daywellness.html
+++ b/t4_7daywellness.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Join our 7 Day Yoga Tour in Sri Lanka. Experience daily yoga sessions, explore stunning landscapes, and immerse yourself in the rich culture of Kandy, Ella, and more." />
+	<meta name="keywords" content="Wellness tour, Ayurveda retreat, yoga, Sri Lanka, Negombo, Sigiriya, Nuwara Eliya, Ella, Wellness tour, Ayurveda wellness retreat, yoga and Ayurveda in Sri Lanka, holistic healing tour, wellness holidays in Sri Lanka, Ayurvedic treatments, yoga retreats in Sri Lanka, wellness tourism Sri Lanka, mindfulness and meditation, detox and rejuvenation programs, Ayurvedic wellness programs, yoga and wellness experiences, nature retreats in Sri Lanka, relaxation and wellness getaway, Ayurvedic spa experiences, natural healing in Sri Lanka, cultural and wellness tour, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="7 Day Yoga Tour - Marvel Voyages | Wellness Retreat in Sri Lanka" />
+	<meta property="og:description" content="Experience serenity and rejuvenation with our 7 Day Yoga Tour. Enjoy yoga sessions amidst beautiful landscapes and discover the cultural richness of Sri Lanka." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t4_7daywellness.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/yoga-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
