--- a/tour-packages.html
+++ b/tour-packages.html
@@ -16,6 +16,21 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+	<!--SEO-->
+	<meta name="description" content="Explore a wide range of tour packages with Marvel Voyages. Discover adventure, cultural, wellness, and northern beach tours in Sri Lanka tailored to your travel desires." />
+	<meta name="keywords" content="Sri Lanka tour packages, adventure tours, cultural experiences, wellness retreats, northern beach tours, Marvel Voyages, travel agency, wildlife tours, custom travel packages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="Tour Packages - Marvel Voyages | Explore Sri Lanka" />
+	<meta property="og:description" content="Discover tailored tour packages with Marvel Voyages. Choose from adventure, cultural, wellness, and northern beach tours in the beautiful island of Sri Lanka." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/tour-packages.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/logo.png" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->
+	
+
 	<!-- Stylesheets -->
 	<link href="assets/css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/lib/fontawesome/css/fontawesome.min.css" rel="stylesheet">
@@ -57,6 +72,7 @@
 							<span data-text-preloader="A" class="letters-loading">A</span>
 							<span data-text-preloader="G" class="letters-loading">G</span>
 							<span data-text-preloader="E" class="letters-loading">E</span>
+							<span data-text-preloader="S" class="letters-loading">S</span>
 							<!--<span data-text-preloader="O" class="letters-loading">O</span>-->
 						</div>
 					</div>
