--- a/contact copy.html
+++ b/contact copy.html
@@ -57,6 +57,7 @@
 							<span data-text-preloader="A" class="letters-loading">A</span>
 							<span data-text-preloader="G" class="letters-loading">G</span>
 							<span data-text-preloader="E" class="letters-loading">E</span>
+							<span data-text-preloader="S" class="letters-loading">S</span>
 							<!--<span data-text-preloader="O" class="letters-loading">O</span>-->
 						</div>
 					</div>
