--- a/t2_5daycultural.html
+++ b/t2_5daycultural.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Embark on a 5 Day Cultural Tour with Marvel Voyages, exploring Sri Lanka's rich heritage. Visit Colombo, Negombo, Kandy, Dambulla, Sigiriya, and Anuradhapura while experiencing local traditions and historical sites." />
+	<meta name="keywords" content="5 Day Cultural Tour, Sri Lanka cultural tours, Colombo, Negombo, Kandy, Dambulla, Sigiriya, Anuradhapura, heritage tours, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="5 Day Cultural Tour - Marvel Voyages | Discover Sri Lanka's Rich Heritage" />
+	<meta property="og:description" content="Join Marvel Voyages for a captivating 5 Day Cultural Tour in Sri Lanka. Experience the beauty of Colombo, Negombo, Kandy, Dambulla, Sigiriya, and Anuradhapura, rich in history and culture." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t2_5daycultural.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/cultural-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
