--- a/t3_5daynothern.html
+++ b/t3_5daynothern.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Discover the stunning beauty of Sri Lanka's Northern region with our 5 Day Northern Region Tour. Explore Jaffna, Mannar, Kalpitiya, and enjoy beach activities at Pongu-ruppu Beach and the historical Dutch Fort." />
+	<meta name="keywords" content="5 Day Northern Region Tour, Jaffna, Mannar, Kalpitiya, Pongu-ruppu Beach, Dutch Fort, Sri Lanka tours, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="5 Day Northern Region Tour - Marvel Voyages | Explore Sri Lanka's Northern Coast" />
+	<meta property="og:description" content="Join Marvel Voyages for a 5 Day Northern Region Tour. Experience the cultural richness of Jaffna, explore Mannar Island, and enjoy beautiful beaches in Kalpitiya." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t3_5daynothern.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/northern-region-tour-5days.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
