--- a/t4_5daywellness.html
+++ b/t4_5daywellness.html
@@ -11,6 +11,20 @@
 
 	<link href="assets/images/favicon.png" rel="shortcut icon" type="image/x-icon">
 
+	<!--SEO-->
+	<meta name="description" content="Revitalize your body and mind with our 5 Day Ayurveda Tour in Sri Lanka. Experience Ayurvedic treatments, wellness retreats, and cultural exploration in Kandy." />
+	<meta name="keywords" content="Wellness tour, Ayurveda retreat, yoga, Sri Lanka, Negombo, Sigiriya, Nuwara Eliya, Ella, Wellness tour, Ayurveda wellness retreat, yoga and Ayurveda in Sri Lanka, holistic healing tour, wellness holidays in Sri Lanka, Ayurvedic treatments, yoga retreats in Sri Lanka, wellness tourism Sri Lanka, mindfulness and meditation, detox and rejuvenation programs, Ayurvedic wellness programs, yoga and wellness experiences, nature retreats in Sri Lanka, relaxation and wellness getaway, Ayurvedic spa experiences, natural healing in Sri Lanka, cultural and wellness tour, Marvel Voyages" />
+	<meta name="author" content="Marvel Voyages" />
+
+	<meta property="og:title" content="5 Day Ayurveda Tour - Marvel Voyages | Wellness in Sri Lanka" />
+	<meta property="og:description" content="Join us for a rejuvenating 5 Day Ayurveda Tour in Sri Lanka. Discover the healing powers of Ayurveda, enjoy serene surroundings, and explore the beauty of Kandy." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.marvelvoyages.lk/t4_5daywellness.html" />
+	<meta property="og:image" content="https://marvelvoyages.lk/assets/images/ayurveda-tour.jpg" />
+	<meta property="og:site_name" content="Marvel Voyages" />
+	<meta property="og:locale" content="en_US" />
+	<!--SEO-->	
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
