--- a/about.html
+++ b/about.html
@@ -45,6 +45,16 @@
 	<link href="assets/css/custom-animate.css" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet">
 	<link href="assets/css/responsive.css" rel="stylesheet">
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ2KFPHXSM"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-RZ2KFPHXSM');
+	</script>
 </head>
 
 <body>
